crates/baton-tui/src/snapshots/baton_tui__tests_b2__config_credenciales_100.snap
---
source: crates/baton-tui/src/tests_b2.rs
expression: "screen(&app, 100, 24)"
---
╭─ ⚙ Configuración · stack-produccion ──────────────────────────────────────── .baton/config.toml ─╮
│ Destinos │ Logs │ Credenciales │ Planes                                                          │
│                   ━━━━━━━━━━━━                                                                   │
│ credenciales referenciadas por los destinos                                                      │
│ › servers.env#PROD_APP        usada por prod-app                                 ○ sin verificar │
│   servers.env#PROD_DB         usada por prod-db                                  ○ sin verificar │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
├──────────────────────────────────────────────────────────────────────────────────────────────────┤
│ [tab] sección  [↑↓] elegir  [esc] volver                                                         │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
