crates/baton-tui/src/snapshots/baton_tui__tests_b2__config_logs_100.snap
---
source: crates/baton-tui/src/tests_b2.rs
expression: "screen(&app, 100, 24)"
---
╭─ ⚙ Configuración · stack-produccion ──────────────────────────────────────── .baton/config.toml ─╮
│ Destinos │ Logs │ Credenciales │ Planes                                                          │
│            ━━━━                                                                                  │
│ logs                                                                                             │
│ local       [ ~/baton-logs/{plan}/{fecha}.log                                                  ] │
│ en destino  [ /var/log/baton/                                             ] (copia en cada host) │
│ formato     ( ) texto  (●) json                                                                  │
│ retención   [ 30 días · máx 500 MB                                                             ] │
│ exportar    ( ) enviar a OTLP / syslog                                                           │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
├──────────────────────────────────────────────────────────────────────────────────────────────────┤
│ [tab] sección  [↑↓] campo  [ctrl s] guardar  [esc] volver                                        │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
