crates/baton-tui/src/snapshots/baton_tui__tests_b2__config_planes_100.snap
---
source: crates/baton-tui/src/tests_b2.rs
expression: "screen(&app, 100, 24)"
---
╭─ ⚙ Configuración · stack-produccion ──────────────────────────────────────── .baton/config.toml ─╮
│ Destinos │ Logs │ Credenciales │ Planes                                                          │
│                                  ━━━━━━                                                          │
│ planes en baton/plans/                                                                           │
│ › instalar            baton/plans/instalar.toml                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
├──────────────────────────────────────────────────────────────────────────────────────────────────┤
│ [tab] sección  [↑↓] elegir  [enter] editar plan  [c] copiar  [r] renombrar  [d] eliminar         │
│ [esc] volver                                                                                     │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
