crates/baton-tui/src/snapshots/baton_tui__tests_b2__credentials_100.snap
---
source: crates/baton-tui/src/tests_b2.rs
expression: "screen(&app, w, h)"
---
╭─ Credenciales requeridas por el plan ─────────────────────────────────────── 2 de 5 confirmadas ─╮
│ estructura               │ ✓ Git · github.com                                                    │
│ .baton/                  │   confirmada hoy                                                      │
│ ├─ config.toml           │ ∅ Servidor · deploy@10.0.4.12                                         │
│ ├─ state.json            │   no preguntar · hasta que falle                                      │
│ ├─ credentials/          │›◐ Docker registry                                                     │
│ │  ├─ git.env            │   esperando confirmación                                              │
│ │  ├─ docker.env         │  ┌──────────────────────────────────────────────────────────────────┐ │
│ │  ├─ servers.env        │  │ registry  [ ghcr.io                                            ] │ │
│ │  └─ db.env             │  │ usuario   [ scode                                              ] │ │
│ ├─ backups/              │  │ token     [ ghp_••••••••3kQ                                    ] │ │
│ └─ logs/                 │  │                                                                  │ │
│                          │  │ <Confirmar> <Editar> <Probar conexión> <No volver a preguntar>   │ │
│                          │  └──────────────────────────────────────────────────────────────────┘ │
│                          │ ○ Base de datos · postgres                                            │
│                          │   desde db.env                                                        │
│                          │ ! Registry privado · nexus                                            │
│                          │   no encontrada · se pedirá                                           │
│                          │                                                                       │
│ permisos 600             │                                                                       │
│ en .gitignore            │                                                                       │
├──────────────────────────────────────────────────────────────────────────────────────────────────┤
│ [↑↓] credencial  [enter] confirmar  [m] mostrar  [n] no preguntar  [a] confirmar todas           │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
