crates/baton-tui/src/snapshots/baton_tui__tests_b2__credentials_80.snap
---
source: crates/baton-tui/src/tests_b2.rs
expression: "screen(&app, w, h)"
---
╭─ Credenciales requeridas por el plan ─────────────────── 2 de 5 confirmadas ─╮
│ ✓ Git · github.com                                                           │
│   confirmada hoy                                                             │
│ ∅ Servidor · deploy@10.0.4.12                                                │
│   no preguntar · hasta que falle                                             │
│›◐ Docker registry                                                            │
│   esperando confirmación                                                     │
│  ┌─────────────────────────────────────────────────────────────────────────┐ │
│  │ registry  [ ghcr.io                                                   ] │ │
│  │ usuario   [ scode                                                     ] │ │
│  │ token     [ ghp_••••••••3kQ                                           ] │ │
│  │                                                                         │ │
│  │ <Confirmar> <Editar> <Probar conexión> <No volver a preguntar>          │ │
│  └─────────────────────────────────────────────────────────────────────────┘ │
│ ○ Base de datos · postgres                                                   │
│   desde db.env                                                               │
│ ! Registry privado · nexus                                                   │
│   no encontrada · se pedirá                                                  │
│                                                                              │
│                                                                              │
├──────────────────────────────────────────────────────────────────────────────┤
│ [↑↓] credencial  [enter] confirmar  [m] mostrar  [n] no preguntar            │
│ [a] confirmar todas                                                          │
╰──────────────────────────────────────────────────────────────────────────────╯
