crates/baton-tui/src/snapshots/baton_tui__tests_b2__credentials_all_done_100.snap
---
source: crates/baton-tui/src/tests_b2.rs
expression: "screen(&app, 100, 24)"
---
╭─ Credenciales requeridas por el plan ─────────────────────────────────────── 5 de 5 confirmadas ─╮
│ estructura               │ ✓ Git · github.com                                                    │
│ .baton/                  │   confirmada hoy                                                      │
│ ├─ config.toml           │ ✓ Servidor · deploy@10.0.4.12                                         │
│ ├─ state.json            │   confirmada hoy                                                      │
│ ├─ credentials/          │›✓ Docker registry                                                     │
│ │  ├─ git.env            │   confirmada hoy                                                      │
│ │  ├─ docker.env         │  ┌──────────────────────────────────────────────────────────────────┐ │
│ │  ├─ servers.env        │  │ registry  [ ghcr.io                                            ] │ │
│ │  └─ db.env             │  │ usuario   [ scode                                              ] │ │
│ ├─ backups/              │  │ token     [ ghp_••••••••3kQ                                    ] │ │
│ └─ logs/                 │  │                                                                  │ │
│                          │  │ <Confirmar> <Editar> <Probar conexión> <No volver a preguntar>   │ │
│                          │  └──────────────────────────────────────────────────────────────────┘ │
│                          │ ✓ Base de datos · postgres                                            │
│                          │   confirmada hoy                                                      │
│                          │ ✓ Registry privado · nexus                                            │
│                          │   confirmada hoy                                                      │
│                          │                                                                       │
│ permisos 600             │                                                                       │
│ en .gitignore            │                                                                       │
├──────────────────────────────────────────────────────────────────────────────────────────────────┤
│ [enter] ejecutar plan  [↑↓] credencial  [m] mostrar  [esc] volver                                │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
