crates/baton-tui/src/snapshots/baton_tui__tests_b2__credentials_missing_100.snap
---
source: crates/baton-tui/src/tests_b2.rs
expression: "screen(&app, 100, 24)"
---
╭─ Credenciales requeridas por el plan ─────────────────────────────────────── 2 de 5 confirmadas ─╮
│ estructura               │ ✓ Git · github.com                                                    │
│ .baton/                  │   confirmada hoy                                                      │
│ ├─ config.toml           │ ∅ Servidor · deploy@10.0.4.12                                         │
│ ├─ state.json            │   no preguntar · hasta que falle                                      │
│ ├─ credentials/          │ ◐ Docker registry                                                     │
│ │  ├─ git.env            │   esperando confirmación                                              │
│ │  ├─ docker.env         │ ○ Base de datos · postgres                                            │
│ │  ├─ servers.env        │   desde db.env                                                        │
│ │  └─ db.env             │›! Registry privado · nexus                                            │
│ ├─ backups/              │   no encontrada · se pedirá                                           │
│ └─ logs/                 │  ┌──────────────────────────────────────────────────────────────────┐ │
│                          │  │ registry  [                                                    ] │ │
│                          │  │ usuario   [                                                    ] │ │
│                          │  │ token     [                                                    ] │ │
│                          │  │                                                                  │ │
│                          │  │ <Confirmar> <Editar> <Probar conexión> <No volver a preguntar>   │ │
│                          │  └──────────────────────────────────────────────────────────────────┘ │
│ permisos 600             │                                                                       │
│ en .gitignore            │                                                                       │
├──────────────────────────────────────────────────────────────────────────────────────────────────┤
│ falta completar: registry, usuario, token                                                        │
│ [tab] siguiente campo  [enter] listo  [esc] salir de la edición                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
